web: set the default lookup op to index
Signed-off-by: Shengjing Zhu <i@zhsj.me>

--- a/web/index.html
+++ b/web/index.html
@@ -229,14 +229,14 @@
                             </label>
                         </p>
                         <p>
-                            <input id="matching" name="op" value="index" type="radio">
+                            <input id="matching" name="op" value="index" checked="checked" type="radio">
                             <label for="matching">
                                 <span class="en">Get regular index of matching keys</span>
                                 <span class="zh">获取匹配公钥的 regular index</span>
                             </label>
                         </p>
                         <p>
-                            <input id="verbose" name="op" value="vindex" checked="checked" type="radio">
+                            <input id="verbose" name="op" value="vindex" type="radio">
                             <label for="verbose">
                                 <span class="en">Get verbose index of matching keys</span>
                                 <span class="zh">获取匹配公钥的 verbose index</span>
