web: remove all the vindex

--- a/web/index.html
+++ b/web/index.html
@@ -236,13 +236,6 @@
                             </label>
                         </p>
                         <p>
-                            <input id="verbose" name="op" value="vindex" type="radio">
-                            <label for="verbose">
-                                <span class="en">Get verbose index of matching keys</span>
-                                <span class="zh">获取匹配公钥的 verbose index</span>
-                            </label>
-                        </p>
-                        <p>
                             <input id="asciiarmored" name="op" value="get" type="radio">
                             <label for="asciiarmored">
                                 <span class="en">Retrieve ascii-armored keys</span>
@@ -314,11 +307,11 @@
                         </p>
                         <p class="en">
                             For operational issues, please contact
-                            <a href="/pks/lookup?op=vindex&search=0xCF0E265B7DFBB2F2">0xCF0E265B7DFBB2F2</a>.
+                            <a href="/pks/lookup?op=index&search=0xCF0E265B7DFBB2F2">0xCF0E265B7DFBB2F2</a>.
                         </p>
                         <p class="zh">
                             如果有任何运营方面的问题，可以联系
-                            <a href="/pks/lookup?op=vindex&search=0xCF0E265B7DFBB2F2">0xCF0E265B7DFBB2F2</a>。
+                            <a href="/pks/lookup?op=index&search=0xCF0E265B7DFBB2F2">0xCF0E265B7DFBB2F2</a>。
                         </p>
                     </li>
                     <li>
